--- a/index.css
+++ b/index.css
@@ -23,9 +23,8 @@
 .res-card{
     padding: 10px;
     margin: 10px;
-    width: 350px;
-    height: 500px; 
-    background-color: lightgrey;
+    width: 220px; 
+    background-color: lightgray
 }
 
 
@@ -35,8 +34,8 @@
 }
 
 .card-logo{
-    width: 40%;
-    height: 50%;
+    width: 180px;
+    height: 200px;
 }
 
 .res-container{
