--- a/index.css
+++ b/index.css
@@ -23,8 +23,8 @@
 .res-card{
     padding: 10px;
     margin: 10px;
-    width: 220px; 
-    background-color: lightgray
+    width: 200px; 
+    background-color: #f0f0f0;
 }
 
 
@@ -39,6 +39,18 @@
 }
 
 .res-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card{
+    margin: 10px;
+    width: 200px;
+    height: 400px;
+    background-color: #f0f0f0;
+}
+
+.shimmer-container{
     display: flex;
     flex-wrap: wrap;
 }
