--- a/index.css
+++ b/index.css
@@ -58,6 +58,12 @@
     padding: 0px 5px;
     cursor: pointer;
 }
+.filter{
+    display: flex;
+    justify-content: space-around;
+    margin: 10px;
+    padding: 10px;
+}
 
 
 
