Footer part addedand Shimmer lib installed

--- a/index.css
+++ b/index.css
@@ -64,6 +64,11 @@
     margin: 10px;
     padding: 10px;
 }
+.footer-cont{
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between
+}
 
 
 
